# scematk

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  RELEASE_PROCESS.md  pyproject.toml  test.ipynb  zzz.ipynb
.devcontainer/: Dockerfile
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: main.yml  pr_checks.yml  schedule-update-actions.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.md  index.rst  installation.md
docs/source/api/: scematk.annotate.rst  scematk.cluster.profiles.rst  scematk.cluster.rst  scematk.data.rst  scematk.deconvolve.rst  scematk.image.rst  scematk.io.rst  scematk.morphology.rst  scematk.normalise.rst  scematk.process.colour.rst  scematk.process.contrast.rst  scematk.process.dask.rst  scematk.process.filter.rst  scematk.process.morphology.rst  scematk.process.rst  scematk.segment.rst  scematk.segment.secondary.rst  scematk.segment.tertiary.rst  scematk.segment.tissue.rst
sandbox/: _test.ipynb  dask-worker.o41763676  dask-worker.o41763677  dask-worker.o41763678  dask-worker.o41763679  dask-worker.o41763680  dask-worker.o41763681  dask-worker.o41763682  dask-worker.o41763683  dask-worker.o41763684  dask-worker.o41763685  dask-worker.o41763686  dask-worker.o41763687  dask-worker.o41763688  dask-worker.o41763689  dask-worker.o41763690  dask-worker.o41763691  dask-worker.o41763692  dask-worker.o41763693  dask-worker.o41763694  dask-worker.o41763695  dask-worker.o41763696  dask-worker.o41763697  dask-worker.o41763698  dask-worker.o41763699  dask-worker.o41763700  dask-worker.o41763701  dask-worker.o41763702  dask-worker.o41763703  dask-worker.o41763704  dask-worker.o41763705  dask-worker.o41763706  dask-worker.o41763707  dask-worker.o41763708  dask-worker.o41763709  dask-worker.o41763710  dask-worker.o41763711  dask-worker.o41763712  dask-worker.o41763713  dask-worker.o41763714  (+1073 more)
scematk/annotate/: __init__.py  _annotate.py  _circle.py  _rectangle.py
scematk/cluster/: __init__.py  _quick_connect.py
scematk/data/: __init__.py  _download_example.py
scematk/deconvolve/: __init__.py  _native_skimage.py  _stain_deconvolver.py
scematk/image/: __init__.py  _binary_mask.py  _image.py  _label_mask.py  _mask.py  _ubyte_image.py
scematk/io/: __init__.py  _read_zarr_bin_mask.py  _read_zarr_lbl_mask.py  _read_zarr_ubimg.py  _tiff_to_zarr.py
scematk/module/: _module.py
scematk/morphology/: __init__.py  _morphological_profiler.py
scematk/normalise/: __init__.py  _normaliser.py  _reinhard_normaliser.py
scematk/process/: __init__.py  _process.py
scematk/segment/: __init__.py  _clip_mask.py  _segmenter.py
scripts/: prepare_changelog.py  release.sh
src/scematk/: __init__.py
tests/: test_methods.py  test_plot.py  test_process_colour.py  test_scematk_color_tests.py  test_scematk_colour_tests.py
tests/image/: test_bin_mask_image.py  test_ubyte_image.py
tests/io/: test_read_zarr_ubimg.py
(+99 files in other folders)
