[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "scematk"
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Hugh Warden", email = "hugh.warden@outlook.com"}
]
requires-python = ">=3.8"
dependencies = [
  "csbdeep>=0.6.0",
  "dask>=2021.6.0",
  "dask-image>=0.6.0",
  "dask-jobqueue>=0.7.0",
  "matplotlib>=3.4.3",
  "matplotlib_scalebar>=0.7.2",
  "numpy>=1.20.0",
  "openslide-python>=1.1.2",
  "requests>=2.26.0",
  "scikit-image>=0.18.3",
  "shapely>=1.7.1",
  "stardist>=0.6.0",
  "tensorflow>=2.6.0",
  "tqdm>=4.62.3",
  "zarr>=2.10.0",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/SCEMA-WSI/scematk"
Repository = "https://github.com/SCEMA-WSI/scematk"
Changelog = "https://github.com/SCEMA-WSI/scematk/blob/main/CHANGELOG.md"
# Documentation = "https://scematk.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0,<1.11",
    "black>=23.0,<25.0",
    "isort>=5.12,<5.14",
    "pytest",
    "pytest-sphinx",
    "pytest-cov",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "Sphinx>=4.3.0,<7.4.0",
    "furo==2024.5.6",
    "myst-parser>=1.0,<3.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.23.3",
    "packaging"
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
scematk = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "scematk.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
